--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=2021.1
+projectVersion=2021.1.1-SNAPSHOT
 projectGroupId=io.openapiprocessor
 
 projectUrl=http://openapiprocessor.io
